--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@flashbots/ethers-provider-bundle": "^0.4.3",
+    "dotenv": "^14.2.0",
     "lodash": "^4.17.21",
     "ts-node": "^9.1.0",
     "typescript": "^4.1.2"
